--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "init": "^0.1.2",
     "mysql2": "^3.8.0",
     "nodemon": "^3.0.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
