--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "init": "^0.1.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.8.0",
     "nodemon": "^3.0.3",
+    "razorpay": "^2.9.2",
     "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
