--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.0",
     "init": "^0.1.2",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.8.0",
     "nodemon": "^3.0.3",
     "razorpay": "^2.9.2",
